styles/global.css
html {
    /* --color: black;
    --background-color: white; */

    --light-color: black;
    --light-background-color: white;

    --dark-color: white;
    --dark-background-color: black;

    --color: white;
    --background-color: black;
}

body[data-theme='light'] {
    --color: var(--light-color);
    --background-color: var(--light-background-color);
}

body[data-theme='dark'] {
    --color: var(--dark-color);
    --background-color: var(--dark-background-color);
}

*,
*::before,
*::after {
    box-sizing: border-box;
}

* {
    margin: 0;
}

html,
body {
    scroll-behavior: smooth;
    height: 100%;
    color: var(--color);
    background-color: var(--background-color);
}

html:focus-within {
    scroll-behavior: smooth;
}

body {
    font-family: 'Roboto Mono', monospace;
    font-size: 16px;
    min-height: 100vh;
    line-height: 1.5;
    text-rendering: optimizeSpeed;
    -webkit-font-smoothing: antialiased;
}

img,
picture,
video,
canvas,
svg {
    display: block;
    max-width: 100%;
}

input,
button,
textarea,
select {
    font: inherit;
}

p,
h1,
h2,
h3,
h4,
h5,
h6 {
    overflow-wrap: break-word;
}

h1 {
    font-size: 36px;
}

h2 {
    font-size: 28px;
}

h3 {
    font-size: 24px;
}

p {
    font-size: 16px;
}

a {
    font-size: 16px;
    text-decoration: none;
    color: var(--color);
    background-color: var(--background-color);
}

a:hover {
    text-decoration: 2px underline;
}

::selection {
    color: var(--color);
    background-color: var(--background-color);
}

@media (max-width: 700px) {
    h1 {
        font-size: 32px;
    }

    h2 {
        font-size: 24px;
    }

    h3 {
        font-size: 20px;
    }

    p,
    a {
        font-size: 14px;
    }
}

